include/El/core/DistMatrix.h

/* An anonymous struct meant as a placeholder for ElementalMatrix<T>
   ----------------------------------------------------------------- */
typedef struct ElDistMatrix_iDummy* ElDistMatrix_i;
typedef struct ElDistMatrix_sDummy* ElDistMatrix_s;
typedef struct ElDistMatrix_dDummy* ElDistMatrix_d;
typedef struct ElDistMatrix_cDummy* ElDistMatrix_c;
typedef struct ElDistMatrix_zDummy* ElDistMatrix_z;
typedef const struct ElDistMatrix_iDummy* ElConstDistMatrix_i;
typedef const struct ElDistMatrix_sDummy* ElConstDistMatrix_s;
typedef const struct ElDistMatrix_dDummy* ElConstDistMatrix_d;
typedef const struct ElDistMatrix_cDummy* ElConstDistMatrix_c;
typedef const struct ElDistMatrix_zDummy* ElConstDistMatrix_z;
/* DistMatrix<T,U,V>::DistMatrix( const Grid& g )
   ---------------------------------------------- */
EL_EXPORT ElError ElDistMatrixCreateSpecific_i
( ElDist U, ElDist V, ElConstGrid g, ElDistMatrix_i* A );
EL_EXPORT ElError ElDistMatrixCreateSpecific_s
( ElDist U, ElDist V, ElConstGrid g, ElDistMatrix_s* A );
EL_EXPORT ElError ElDistMatrixCreateSpecific_d
( ElDist U, ElDist V, ElConstGrid g, ElDistMatrix_d* A );
EL_EXPORT ElError ElDistMatrixCreateSpecific_c
( ElDist U, ElDist V, ElConstGrid g, ElDistMatrix_c* A );
EL_EXPORT ElError ElDistMatrixCreateSpecific_z
( ElDist U, ElDist V, ElConstGrid g, ElDistMatrix_z* A );
/* ElementalMatrix<T>::~ElementalMatrix()
   -------------------------------------- */
EL_EXPORT ElError ElDistMatrixDestroy_i( ElConstDistMatrix_i A );
EL_EXPORT ElError ElDistMatrixDestroy_s( ElConstDistMatrix_s A );
EL_EXPORT ElError ElDistMatrixDestroy_d( ElConstDistMatrix_d A );
EL_EXPORT ElError ElDistMatrixDestroy_c( ElConstDistMatrix_c A );
EL_EXPORT ElError ElDistMatrixDestroy_z( ElConstDistMatrix_z A );
/* void AbstractDistMatrix<T>::Empty()
   ----------------------------------- */
EL_EXPORT ElError ElDistMatrixEmpty_i( ElDistMatrix_i A );
EL_EXPORT ElError ElDistMatrixEmpty_s( ElDistMatrix_s A );
EL_EXPORT ElError ElDistMatrixEmpty_d( ElDistMatrix_d A );
EL_EXPORT ElError ElDistMatrixEmpty_c( ElDistMatrix_c A );
EL_EXPORT ElError ElDistMatrixEmpty_z( ElDistMatrix_z A );
/* void AbstractDistMatrix<T>::EmptyData()
   --------------------------------------- */
EL_EXPORT ElError ElDistMatrixEmptyData_i( ElDistMatrix_i A );
EL_EXPORT ElError ElDistMatrixEmptyData_s( ElDistMatrix_s A );
EL_EXPORT ElError ElDistMatrixEmptyData_d( ElDistMatrix_d A );
EL_EXPORT ElError ElDistMatrixEmptyData_c( ElDistMatrix_c A );
EL_EXPORT ElError ElDistMatrixEmptyData_z( ElDistMatrix_z A );
/* void AbstractDistMatrix<T>::SetGrid( const Grid& g )
   ---------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixSetGrid_i( ElDistMatrix_i A, ElConstGrid grid );
EL_EXPORT ElError ElDistMatrixSetGrid_s( ElDistMatrix_s A, ElConstGrid grid );
EL_EXPORT ElError ElDistMatrixSetGrid_d( ElDistMatrix_d A, ElConstGrid grid );
EL_EXPORT ElError ElDistMatrixSetGrid_c( ElDistMatrix_c A, ElConstGrid grid );
EL_EXPORT ElError ElDistMatrixSetGrid_z( ElDistMatrix_z A, ElConstGrid grid );
/* void AbstractDistMatrix<T>::Resize( Int height, Int width )
   ----------------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixResize_i
( ElDistMatrix_i A, ElInt height, ElInt width );
EL_EXPORT ElError ElDistMatrixResize_s
( ElDistMatrix_s A, ElInt height, ElInt width );
EL_EXPORT ElError ElDistMatrixResize_d
( ElDistMatrix_d A, ElInt height, ElInt width );
EL_EXPORT ElError ElDistMatrixResize_c
( ElDistMatrix_c A, ElInt height, ElInt width );
EL_EXPORT ElError ElDistMatrixResize_z
( ElDistMatrix_z A, ElInt height, ElInt width );
/* void ElementalMatrix<T>::Resize( Int height, Int width, Int ldim )
   ------------------------------------------------------------------ */
EL_EXPORT ElError ElDistMatrixResizeWithLDim_i
( ElDistMatrix_i A, ElInt height, ElInt width, ElInt ldim );
EL_EXPORT ElError ElDistMatrixResizeWithLDim_s
( ElDistMatrix_s A, ElInt height, ElInt width, ElInt ldim );
EL_EXPORT ElError ElDistMatrixResizeWithLDim_d
( ElDistMatrix_d A, ElInt height, ElInt width, ElInt ldim );
EL_EXPORT ElError ElDistMatrixResizeWithLDim_c
( ElDistMatrix_c A, ElInt height, ElInt width, ElInt ldim );
EL_EXPORT ElError ElDistMatrixResizeWithLDim_z
( ElDistMatrix_z A, ElInt height, ElInt width, ElInt ldim );
/* void ElementalMatrix<T>::MakeConsistent( bool includeViewers )
   -------------------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixMakeConsistent_i
( ElDistMatrix_i A, bool includeViewers );
EL_EXPORT ElError ElDistMatrixMakeConsistent_s
( ElDistMatrix_s A, bool includeViewers );
EL_EXPORT ElError ElDistMatrixMakeConsistent_d
( ElDistMatrix_d A, bool includeViewers );
EL_EXPORT ElError ElDistMatrixMakeConsistent_c
( ElDistMatrix_c A, bool includeViewers );
EL_EXPORT ElError ElDistMatrixMakeConsistent_z
( ElDistMatrix_z A, bool includeViewers );
/* void ElementalMatrix<T>::MakeSizeConsistent( bool includeViewers )
   ------------------------------------------------------------------ */
EL_EXPORT ElError ElDistMatrixMakeSizeConsistent_i
( ElDistMatrix_i A, bool includeViewers );
EL_EXPORT ElError ElDistMatrixMakeSizeConsistent_s
( ElDistMatrix_s A, bool includeViewers );
EL_EXPORT ElError ElDistMatrixMakeSizeConsistent_d
( ElDistMatrix_d A, bool includeViewers );
EL_EXPORT ElError ElDistMatrixMakeSizeConsistent_c
( ElDistMatrix_c A, bool includeViewers );
EL_EXPORT ElError ElDistMatrixMakeSizeConsistent_z
( ElDistMatrix_z A, bool includeViewers );
/* void ElementalMatrix<T>::Align
   ( int colAlign, int rowAlign, bool constrain )
   ---------------------------------------------- */
EL_EXPORT ElError ElDistMatrixAlign_i
( ElDistMatrix_i A, int colAlign, int rowAlign, bool constrain );
EL_EXPORT ElError ElDistMatrixAlign_s
( ElDistMatrix_s A, int colAlign, int rowAlign, bool constrain );
EL_EXPORT ElError ElDistMatrixAlign_d
( ElDistMatrix_d A, int colAlign, int rowAlign, bool constrain );
EL_EXPORT ElError ElDistMatrixAlign_c
( ElDistMatrix_c A, int colAlign, int rowAlign, bool constrain );
EL_EXPORT ElError ElDistMatrixAlign_z
( ElDistMatrix_z A, int colAlign, int rowAlign, bool constrain );
/* void ElementalMatrix<T>::AlignCols( int colAlign, bool constrain )
   ------------------------------------------------------------------ */
EL_EXPORT ElError ElDistMatrixAlignCols_i
( ElDistMatrix_i A, int colAlign, bool constrain );
EL_EXPORT ElError ElDistMatrixAlignCols_s
( ElDistMatrix_s A, int colAlign, bool constrain );
EL_EXPORT ElError ElDistMatrixAlignCols_d
( ElDistMatrix_d A, int colAlign, bool constrain );
EL_EXPORT ElError ElDistMatrixAlignCols_c
( ElDistMatrix_c A, int colAlign, bool constrain );
EL_EXPORT ElError ElDistMatrixAlignCols_z
( ElDistMatrix_z A, int colAlign, bool constrain );
/* void ElementalMatrix<T>::AlignRows( int rowAlign, bool constrain )
   ------------------------------------------------------------------ */
EL_EXPORT ElError ElDistMatrixAlignRows_i
( ElDistMatrix_i A, int rowAlign, bool constrain );
EL_EXPORT ElError ElDistMatrixAlignRows_s
( ElDistMatrix_s A, int rowAlign, bool constrain );
EL_EXPORT ElError ElDistMatrixAlignRows_d
( ElDistMatrix_d A, int rowAlign, bool constrain );
EL_EXPORT ElError ElDistMatrixAlignRows_c
( ElDistMatrix_c A, int rowAlign, bool constrain );
EL_EXPORT ElError ElDistMatrixAlignRows_z
( ElDistMatrix_z A, int rowAlign, bool constrain );
/* void ElementalMatrix<T>::FreeAlignments()
   ----------------------------------------- */
EL_EXPORT ElError ElDistMatrixFreeAlignments_i( ElDistMatrix_i A );
EL_EXPORT ElError ElDistMatrixFreeAlignments_s( ElDistMatrix_s A );
EL_EXPORT ElError ElDistMatrixFreeAlignments_d( ElDistMatrix_d A );
EL_EXPORT ElError ElDistMatrixFreeAlignments_c( ElDistMatrix_c A );
EL_EXPORT ElError ElDistMatrixFreeAlignments_z( ElDistMatrix_z A );
/* void ElementalMatrix<T>::SetRoot( int root, bool constrain )
   ------------------------------------------------------------ */
EL_EXPORT ElError ElDistMatrixSetRoot_i
( ElDistMatrix_i A, int root, bool constrain );
EL_EXPORT ElError ElDistMatrixSetRoot_s
( ElDistMatrix_s A, int root, bool constrain );
EL_EXPORT ElError ElDistMatrixSetRoot_d
( ElDistMatrix_d A, int root, bool constrain );
EL_EXPORT ElError ElDistMatrixSetRoot_c
( ElDistMatrix_c A, int root, bool constrain );
EL_EXPORT ElError ElDistMatrixSetRoot_z
( ElDistMatrix_z A, int root, bool constrain );