python/core/DistMatrix.py

#
#  Copyright (c) 2009-2016, Jack Poulson
#  All rights reserved.
#
#  This file is part of Elemental and is under the BSD 2-Clause License, 
#  which can be found in the LICENSE file in the root directory, or at 
#  http://opensource.org/licenses/BSD-2-Clause
#
from environment import *
from imports     import mpi
import ctypes, numpy

import Matrix as M
import Grid as G

class DistData(ctypes.Structure):
  _fields_ = [('colDist',c_uint),
              ('rowDist',c_uint), 
              ('colAlign',c_int),
              ('rowAlign',c_int),
              ('root',c_int),
              ('grid',c_void_p)]

class DistMatrix(object):

  # Create an instance with a particular matrix distribution
  # --------------------------------------------------------
  lib.ElDistMatrixCreateSpecific_i.argtypes = \
  lib.ElDistMatrixCreateSpecific_s.argtypes = \
  lib.ElDistMatrixCreateSpecific_d.argtypes = \
  lib.ElDistMatrixCreateSpecific_c.argtypes = \
  lib.ElDistMatrixCreateSpecific_z.argtypes = \
    [c_uint,c_uint,c_void_p,POINTER(c_void_p)]
  def __init__(self,tag=dTag,colDist=MC,rowDist=MR,grid=G.DefaultGrid()):
    self.obj = c_void_p()
    CheckTag(tag)
    args = [colDist,rowDist,grid.obj,pointer(self.obj)]
    if   tag == iTag: lib.ElDistMatrixCreateSpecific_i(*args)
    elif tag == sTag: lib.ElDistMatrixCreateSpecific_s(*args)
    elif tag == dTag: lib.ElDistMatrixCreateSpecific_d(*args)
    elif tag == cTag: lib.ElDistMatrixCreateSpecific_c(*args)
    elif tag == zTag: lib.ElDistMatrixCreateSpecific_z(*args)
    else: DataExcept()
    self.tag = tag

  # Destroy an instance
  # -------------------
  lib.ElDistMatrixDestroy_i.argtypes = \
  lib.ElDistMatrixDestroy_s.argtypes = \
  lib.ElDistMatrixDestroy_d.argtypes = \
  lib.ElDistMatrixDestroy_c.argtypes = \
  lib.ElDistMatrixDestroy_z.argtypes = \
    [c_void_p]
  def Destroy(self):
    args = [self.obj]
    if   self.tag == iTag: lib.ElDistMatrixDestroy_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixDestroy_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixDestroy_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixDestroy_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixDestroy_z(*args)
    else: DataExcept()

  # Reset the matrix to the default (empty) state
  # ---------------------------------------------
  lib.ElDistMatrixEmpty_i.argtypes = \
  lib.ElDistMatrixEmpty_s.argtypes = \
  lib.ElDistMatrixEmpty_d.argtypes = \
  lib.ElDistMatrixEmpty_c.argtypes = \
  lib.ElDistMatrixEmpty_z.argtypes = \
    [c_void_p,bType]
  def Empty(self,freeMemory=True):
    args = [self.obj,freeMemory]
    if   self.tag == iTag: lib.ElDistMatrixEmpty_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixEmpty_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixEmpty_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixEmpty_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixEmpty_z(*args)
    else: DataExcept()

  # Resize the matrix to 0 x 0, demand ownership, and delete underlying buffer
  # --------------------------------------------------------------------------
  lib.ElDistMatrixEmptyData_i.argtypes = \
  lib.ElDistMatrixEmptyData_s.argtypes = \
  lib.ElDistMatrixEmptyData_d.argtypes = \
  lib.ElDistMatrixEmptyData_c.argtypes = \
  lib.ElDistMatrixEmptyData_z.argtypes = \
    [c_void_p,bType]
  def EmptyData(self,freeMemory=True):
    args = [self.obj,freeMemory]
    if   self.tag == iTag: lib.ElDistMatrixEmptyData_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixEmptyData_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixEmptyData_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixEmptyData_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixEmptyData_z(*args)
    else: DataExcept()

  # Specify the process grid of the matrix (if different, resize to 0x0)
  # --------------------------------------------------------------------
  lib.ElDistMatrixSetGrid_i.argtypes = \
  lib.ElDistMatrixSetGrid_s.argtypes = \
  lib.ElDistMatrixSetGrid_d.argtypes = \
  lib.ElDistMatrixSetGrid_c.argtypes = \
  lib.ElDistMatrixSetGrid_z.argtypes = \
    [c_void_p,c_void_p]
  def SetGrid(self,grid):
    args = [self.obj,grid.obj]
    if   self.tag == iTag: lib.ElDistMatrixSetGrid_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixSetGrid_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixSetGrid_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixSetGrid_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixSetGrid_z(*args)
    else: DataExcept()

  # Resize the matrix to have the specified height and width
  # --------------------------------------------------------
  lib.ElDistMatrixResize_i.argtypes = \
  lib.ElDistMatrixResize_s.argtypes = \
  lib.ElDistMatrixResize_d.argtypes = \
  lib.ElDistMatrixResize_c.argtypes = \
  lib.ElDistMatrixResize_z.argtypes = \
    [c_void_p,iType,iType]
  def Resize(self,m,n):
    args = [self.obj,m,n]
    if   self.tag == iTag: lib.ElDistMatrixResize_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixResize_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixResize_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixResize_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixResize_z(*args)
    else: DataExcept()

  # Specify the leading dimension in addition to simply resizing
  # ------------------------------------------------------------
  lib.ElDistMatrixResizeWithLDim_i.argtypes = \
  lib.ElDistMatrixResizeWithLDim_s.argtypes = \
  lib.ElDistMatrixResizeWithLDim_d.argtypes = \
  lib.ElDistMatrixResizeWithLDim_c.argtypes = \
  lib.ElDistMatrixResizeWithLDim_z.argtypes = \
    [c_void_p,iType,iType,iType]
  def ResizeWithLDim(self,m,n,ldim):
    args = [self.obj,m,n,ldim]
    if   self.tag == iTag: lib.ElDistMatrixResizeWithLDim_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixResizeWithLDim_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixResizeWithLDim_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixResizeWithLDim_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixResizeWithLDim_z(*args)
    else: DataExcept()

  # Force all processes to share matrix metadata with the root process
  # ------------------------------------------------------------------
  lib.ElDistMatrixMakeConsistent_i.argtypes = \
  lib.ElDistMatrixMakeConsistent_s.argtypes = \
  lib.ElDistMatrixMakeConsistent_d.argtypes = \
  lib.ElDistMatrixMakeConsistent_c.argtypes = \
  lib.ElDistMatrixMakeConsistent_z.argtypes = \
    [c_void_p,bType]
  def MakeConsistent(self,incViewers):
    args = [self.obj,incViewers]
    if   self.tag == iTag: lib.ElDistMatrixMakeConsistent_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixMakeConsistent_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixMakeConsistent_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixMakeConsistent_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixMakeConsistent_z(*args)
    else: DataExcept()

  # Force all processes to set the matrix dimensions to that of the root's
  # ----------------------------------------------------------------------
  lib.ElDistMatrixMakeSizeConsistent_i.argtypes = \
  lib.ElDistMatrixMakeSizeConsistent_s.argtypes = \
  lib.ElDistMatrixMakeSizeConsistent_d.argtypes = \
  lib.ElDistMatrixMakeSizeConsistent_c.argtypes = \
  lib.ElDistMatrixMakeSizeConsistent_z.argtypes = \
    [c_void_p,bType]
  def MakeSizeConsistent(self,incViewers):
    args = [self.obj,incViewers]
    if   self.tag == iTag: lib.ElDistMatrixMakeSizeConsistent_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixMakeSizeConsistent_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixMakeSizeConsistent_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixMakeSizeConsistent_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixMakeSizeConsistent_z(*args)
    else: DataExcept()

  # Set the column and row alignments
  # ---------------------------------
  lib.ElDistMatrixAlign_i.argtypes = \
  lib.ElDistMatrixAlign_s.argtypes = \
  lib.ElDistMatrixAlign_d.argtypes = \
  lib.ElDistMatrixAlign_c.argtypes = \
  lib.ElDistMatrixAlign_z.argtypes = \
    [c_void_p,c_int,c_int,bType]
  def Align(self,colAlign,rowAlign,constrain):
    args = [self.obj,colAlign,rowAlign,constrain]
    if   self.tag == iTag: lib.ElDistMatrixAlign_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixAlign_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixAlign_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixAlign_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixAlign_z(*args)
    else: DataExcept()

  # Set the column alignment
  # ------------------------
  lib.ElDistMatrixAlignCols_i.argtypes = \
  lib.ElDistMatrixAlignCols_s.argtypes = \
  lib.ElDistMatrixAlignCols_d.argtypes = \
  lib.ElDistMatrixAlignCols_c.argtypes = \
  lib.ElDistMatrixAlignCols_z.argtypes = \
    [c_void_p,c_int,bType]
  def AlignCols(self,colAlign,constrain):
    args = [self.obj,colAlign,constrain]
    if   self.tag == iTag: lib.ElDistMatrixAlignCols_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixAlignCols_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixAlignCols_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixAlignCols_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixAlignCols_z(*args)
    else: DataExcept()

  # Set the row alignment
  # ---------------------
  lib.ElDistMatrixAlignRows_i.argtypes = \
  lib.ElDistMatrixAlignRows_s.argtypes = \
  lib.ElDistMatrixAlignRows_d.argtypes = \
  lib.ElDistMatrixAlignRows_c.argtypes = \
  lib.ElDistMatrixAlignRows_z.argtypes = \
    [c_void_p,c_int,bType]
  def AlignRows(self,rowAlign,constrain):
    args = [self.obj,rowAlign,constrain]
    if   self.tag == iTag: lib.ElDistMatrixAlignRows_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixAlignRows_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixAlignRows_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixAlignRows_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixAlignRows_z(*args)
    else: DataExcept()

  # Unconstrain the row and column alignments for future assignments
  # ----------------------------------------------------------------
  lib.ElDistMatrixFreeAlignments_i.argtypes = \
  lib.ElDistMatrixFreeAlignments_s.argtypes = \
  lib.ElDistMatrixFreeAlignments_d.argtypes = \
  lib.ElDistMatrixFreeAlignments_c.argtypes = \
  lib.ElDistMatrixFreeAlignments_z.argtypes = \
    [c_void_p]
  def FreeAlignments(self):
    args = [self.obj]
    if   self.tag == iTag: lib.ElDistMatrixFreeAlignments_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixFreeAlignments_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixFreeAlignments_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixFreeAlignments_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixFreeAlignments_z(*args)
    else: DataExcept()

  # Set the root process within the "cross" communicator
  # ----------------------------------------------------
  lib.ElDistMatrixSetRoot_i.argtypes = \
  lib.ElDistMatrixSetRoot_s.argtypes = \
  lib.ElDistMatrixSetRoot_d.argtypes = \
  lib.ElDistMatrixSetRoot_c.argtypes = \
  lib.ElDistMatrixSetRoot_z.argtypes = \
    [c_void_p,c_int,bType]
  def SetRoot(self,root,constrain=True):
    args = [self.obj,root,constrain]
    if   self.tag == iTag: lib.ElDistMatrixSetRoot_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixSetRoot_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixSetRoot_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixSetRoot_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixSetRoot_z(*args)
    else: DataExcept()
